Frontend (adaptar template)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="TicketBuster - Sistema de venta de tickets" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="/manifest.json" />
+    <meta name="description" content="TicketBuster - Sistema de venta de tickets con soporte offline" />
+    <meta name="theme-color" content="#0a56ea" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="TicketBuster" />
     <title>TicketBuster</title>
   </head>
   <body>
