fix render de seleccionar asientos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="TicketBuster - Sistema de venta de tickets con soporte offline" />
     <meta name="theme-color" content="#0a56ea" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="TicketBuster" />
     <title>TicketBuster</title>
